--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
 
         <service
             android:name=".OrderConfirmation"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".FoodActivity" />
+        <activity android:name=".DrinkActivity"></activity>
     </application>
 
 </manifest>
